--- a/main/index.html
+++ b/main/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Dashboard Monitoria FMCC II</title>
-    <link rel="shortcut icon" type="image/jpg" href="../../../favicon.ico" />
+    <link rel="shortcut icon" type="image/jpg" href="../favicon.ico" />
   </head>
   <body>
     <div id="container">
@@ -22,5 +22,5 @@
     </div>
   </body>
 
-  <script src="script.js"></script>
+  <script src="./script.js"></script>
 </html>
