Criando tela de detalhes da duvida

--- a/details/index.html
+++ b/details/index.html
@@ -4,11 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css" />
     <title>Dashboard Monitoria FMCC II</title>
   </head>
   <body>
-    <h1>TESTE DE DETALHES</h1>
+    <div id="container">
+      <div class="info" id="name">
+        <h1>Nome:</h1>
+        <h2></h2>
+      </div>
+      <div class="info" id="matricula">
+        <h1>Matrícula:</h1>
+        <h2></h2>
+      </div>
+      <div class="info" id="contact">
+        <h1>Contato:</h1>
+        <h2></h2>
+      </div>
+      <h1>Descrição da dúvida:</h1>
+      <div id="description">
+        <span> </span>
+      </div>
+    </div>
   </body>
 
   <script src="./script.js"></script>
