Mudando status da pergunta

--- a/details/index.html
+++ b/details/index.html
@@ -25,6 +25,10 @@
       <div id="description">
         <span> </span>
       </div>
+      <div class="info" id="closed">
+        <h1>Closed:</h1>
+        <input id="is-closed" type="checkbox" name="" id="">
+      </div>
     </div>
   </body>
 
