--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           <strong>Nome</strong>
           <strong>Contato</strong>
           <strong>Data de envio</strong>
+          <strong>Closed</strong>
         </li>
       </ui>
     </div>
